refactor: Make some changes to the config file and some shared files and documentation
